[gd_scene load_steps=2 format=3 uid="uid://dj8raj6theku0"]

[ext_resource type="Script" uid="uid://clxb7l7k7ux1d" path="res://scenes/creation_personnage/etape_1.gd" id="1_721vm"]

[node name="Frame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_721vm")

[node name="Arrière-plan" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.258824, 0.580392, 0.564706, 1)

[node name="Titre" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -93.0
offset_right = 93.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Création de personnage"

[node name="Retour" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.053
anchor_top = 0.906
anchor_right = 0.095
anchor_bottom = 0.906
offset_top = -43.0
offset_right = 90.0
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "Retour"

[node name="Fichier" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.125
anchor_top = 0.5
anchor_right = 0.125
anchor_bottom = 0.5
offset_top = -28.0
offset_right = 315.0
offset_bottom = 29.0
grow_vertical = 2
theme_override_font_sizes/font_size = 35
text = "Ouvrir un fichier..."

[node name="Nouveau" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -582.0
offset_top = -46.0
offset_right = -107.0
offset_bottom = 60.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 35
text = "Créer un tout nouveau
 personnage..."

[node name="Personnages" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.768
anchor_right = 0.5
anchor_bottom = 0.811
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Accéder aux personnages"

[node name="Ouverture" type="FileDialog" parent="."]
title = "Open File(s)"
ok_button_text = "Open"
cancel_button_text = "Annuler"
file_mode = 1
filters = PackedStringArray("*.xml")

[node name="Avertissement" type="AcceptDialog" parent="."]
title = "Attention"
initial_position = 2
size = Vector2i(121, 100)
ok_button_text = "J'ai compris"

[connection signal="pressed" from="Retour" to="." method="_on_retour_pressed"]
[connection signal="pressed" from="Fichier" to="." method="_on_fichier_pressed"]
[connection signal="pressed" from="Personnages" to="." method="acces_aux_personnages"]
